# HEVEC

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
client/: CMakeLists.txt
client/include/HEVEC/: Ciphertext.hpp  Client.hpp  Const.hpp  HEVECServer.hpp  HEval.hpp  Keys.hpp  MLWECiphertext.hpp  MLWESwitchingKey.hpp  MetricType.hpp  PIRServer.hpp  SecretKey.hpp
client/node/: README.md  addon.cpp  index.ts  package.json  types.d.ts
client/src/: Client.cpp  HEVECClient.cpp  HEval.cpp  PIRServer.cpp  Server.cpp
server/: CMakeLists.txt  run_server.py  setup.py
server/conda/: HEVEC-dev.yml
server/example/: README.md  ex0_ip.py  ex1_deep1m.py  ex2_laion.py  ex3_locomo.py
server/include/HEVEC/: HEVECClient.hpp  HEVECClientTCP.hpp  HEVECOperation.hpp  HEVECServerTCP.hpp  HEval.hpp  Message.hpp  Polynomial.hpp  Random.hpp  Server.hpp  SwitchingKey.hpp  TopK.hpp  Type.hpp
server/python/: bindings.cpp
server/src/: HEVECClient.cpp  HEVECClientTCP.cpp  HEVECServer.cpp  HEVECServerTCP.cpp  HEval.cpp  PIRServer.cpp  Random.cpp  SecretKey.cpp
