[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hevec"
version = "0.0.1"
description = "Homomorphically Encrypted Vector Database"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "HEVEC contributors" }]
keywords = ["homomorphic-encryption", "vector-database", "privacy", "ml"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security :: Cryptography",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
